<resources>
    <string name="app_name">Menulateral</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="region">Region</string>
    <string name="total_sales">Total Sales</string>
    <string name="product_name">Product Name</string>
    <string name="ventas_regi_n">Ventas Región</string>
    <string name="ventas_cuatrimestre" />
    <string name="satisfaccion_cliente" />
    <string name="ventas_region" />
</resources>