<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtProductNameCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRegionCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region" />

        <TextView
            android:id="@+id/txtTotalSales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_sales" />

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="75" />

    </LinearLayout>
</androidx.cardview.widget.CardView>