<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mynic.menulateral.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mynic.menulateral.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mynic.menulateral.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/graficas"
        android:name="com.mynic.menulateral.Graficas"
        android:label="fragment_graficas"
        tools:layout="@layout/fragment_graficas" />
    <fragment
        android:id="@+id/reportes"
        android:name="com.mynic.menulateral.Reportes"
        android:label="fragment_reportes"
        tools:layout="@layout/fragment_reportes" />

    <fragment
        android:id="@+id/productoRegionFragment"
        android:name="com.mynic.menulateral.ProductoRegionFragment"
        android:label="Ventas por Región"
        tools:layout="@layout/fragment_producto_region" />

    <!-- Destinos para VentaProducto y SatisfaccionCliente -->
    <fragment
        android:id="@+id/ventaProductoFragment"
        android:name="com.mynic.menulateral.VentaProductoFragment"
        android:label="Ventas por Cuatrimestre"
        tools:layout="@layout/fragment_venta_producto" />

    <fragment
        android:id="@+id/satisfaccionClienteFragment"
        android:name="com.mynic.menulateral.SatisfaccionClienteFragment"
        android:label="Satisfacción Cliente"
        tools:layout="@layout/fragment_satisfaccion_cliente" />
</navigation>